[FIX] web_editor: make background grid more visible on dark backgrounds
When redesigning the grid layout and handles, commit [1] removed the
filter that allowed the grid to be clearly visible on dark backgrounds
(added in commit [2]). Without this, the background grid when dragging/
resizing and the highlight effect when changing the gaps are difficult
to see.

This commit adds this filter back, but with a lowered opacity in order
to not obstruct the view too much.

[1]: https://github.com/odoo/odoo/commit/70f723a9f78c406746f5409f6a89cbe93ad21580
[2]: https://github.com/odoo/odoo/commit/1aa81243b7c80069c576381e2f3b04281455794f

task-3369695

Part-of: odoo/odoo#136683

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -2613,6 +2613,7 @@ we-select.o_grid we-toggler {
         stroke: $o-we-bg-darkest;
         stroke-opacity: .2;
         stroke-width: 1px;
+        filter: drop-shadow(-1px -1px 0px rgba(255, 255, 255, 0.3));
     }
 
     &.o_we_grid_preview {
